@@ -6,6 +6,7 @@ v1.0.8
 - New 'visibleoverride'
 - New 'noGroups' build option
 - Template improvements
+- Automatically add a reload parameter to GUI 312 selected widgets
 - Minor fixes
 
 v1.0.7
